kubernetes/ingress-backend.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    #kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/bewebapp(/|$)(.*)
            pathType : ImplementationSpecific
            backend:
              service:
                name: bewebapp
                port:
                  number: 8080
